--- a/src/Card.css
+++ b/src/Card.css
@@ -18,7 +18,7 @@
 }
 
 .image {
-  background-image: url("../images/cards.png");
+  background-image: url("./cards.png");
   background-color: #fff;
   width: 100%;
   height: 100%;
