--- a/src/Filler.css
+++ b/src/Filler.css
@@ -1,5 +1,5 @@
 #filler {
-  background-color: red;
+  background-color: silver;
   border-radius: inherit;
   height: 100%;
   transition: width 0.2s ease-in;
