--- a/src/Image.css
+++ b/src/Image.css
@@ -1,5 +1,5 @@
 .image {
-  background-image: url("./cards.png");
+  background-image: url('./cards.png');
   background-color: #fff;
   width: 100%;
   height: 100%;
